# garden

./: .codecov.yml  .env.shared  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .safety-policy.yml  LICENSE  README.md  mkdocs.yml  privacy.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: story.md
.github/workflows/: ci.yaml  documentation-links.yaml  end-to-end.yaml  ete_test.yaml  ete_test.yml  ete_test_full.yml  ete_test_skinny.yml  pypi.yaml
docs/: CLI.md  Entrypoints.md  Gardens.md  Models.md  Pipelines.md  Steps.md  api-docs.md  architecture_overview.md  conf.py  garden-ai.md  garden_ai.rst  index.md  index.rst  modules.rst  quickstart.rst
docs/developer_guide/: Remote_pipelines_without_garden_dependency.md  contributing.md
docs/user_guide/: docker.md  faqs.md  installation.md  introduction.md  modal-publishing.md  serialization.md  tutorial.md
docs/user_guide/notebooks/: Garden_Tutorial_Execute_Model_Remotely.ipynb  README.md
docs/user_guide/publishing/: modal-publishing.md
examples/: basic_example.py  globus_search_publish.py  requirements.txt  toy_example.py
garden/: __init__.py  garden.py  version.py
garden_ai/: __init__.py  __main__.py  _model.py  _version.py  backend_client.py  client.py  constants.py  containers.py  datacite.py  entrypoints.py  garden.py  garden_file_adapter.py  gardens.py  local_data.py  metadata.py  mlmodel.py  model.py  models.py  notebook_metadata.py  pipelines.py  pydantic_models.py  steps.py  utils.py  version.py
garden_ai/app/: completion.py  console.py  create.py  docker.py  entrypoint.py  functions.py  garden.py  groundhog.py  hpc_notebook.py  main.py  mcp.py  modal_cmds.py  model.py  notebook.py  pipeline.py  prototype.py  utils.py
garden_ai/base_image_dockerfiles/: Dockerfile_jupyter_3.10  Dockerfile_jupyter_3.9  Dockerfile_jupyter_tf_3.10  Dockerfile_jupyter_tf_3.11  Dockerfile_jupyter_tf_3.9  Dockerfile_jupyter_torch_3.10  Dockerfile_jupyter_torch_3.9  build_push_images.sh
garden_ai/benchmarks/: __init__.py
garden_ai/benchmarks/matbench_discovery/: README.md  __init__.py  enums.py  metrics.py  remote.py  remote_runner.py  tasks.py
garden_ai/benchmarks/templates/: base_runner.py
garden_ai/benchmarks/utils/: meta_metrics.py  remote.py  remote_execution.py  script_builder.py  task.py
garden_ai/container/: containerize.py
garden_ai/container/base_images/: Dockerfile_jupyter_3.11  Dockerfile_jupyter_3.8  Dockerfile_jupyter_all_3.10  Dockerfile_jupyter_all_3.8  Dockerfile_jupyter_sklearn_3.10  Dockerfile_jupyter_sklearn_3.11  Dockerfile_jupyter_sklearn_3.8  Dockerfile_jupyter_sklearn_3.9  Dockerfile_jupyter_tf_3.11  Dockerfile_jupyter_tf_3.8  Dockerfile_jupyter_tf_3.9  Dockerfile_jupyter_torch_3.11  Dockerfile_jupyter_torch_3.8
garden_ai/funcx_bandaid/: serialization_patch.py
garden_ai/globus_compute/: containers.py  login_manager.py  remote_functions.py
garden_ai/globus_search/: __init__.py  garden_search.py
garden_ai/hpc/: __init__.py  executor.py  functions.py  groundhog.py  utils.py
garden_ai/hpc/gardens/: batch_relax.py  mlip_garden.py
garden_ai/hpc_executors/: edith_executor.py
garden_ai/hpc_gardens/: alpha_fold.py  mlip_garden.py  utils.py
garden_ai/mcp/: README.md  config_add.py  mlip.py  server.py  utils.py
garden_ai/mlflow_bandaid/: binary_header_provider.py
garden_ai/modal/: classes.py  functions.py
garden_ai/model_connectors/: __init__.py  exceptions.py  github_conn.py  hugging_face.py  model_connector.py  model_utils.py
garden_ai/model_file_transfer/: download.py  upload.py
garden_ai/notebook_templates/: busted.ipynb  debug.ipynb  empty.ipynb  requirements.txt  sklearn.ipynb  tensorflow.ipynb  torch.ipynb  tutorial.ipynb
garden_ai/schemas/: __init__.py  base.py  benchmark.py  datacite.py  entrypoint.py  garden.py  groundhog.py  hpc.py  modal.py  modal_app.py  schema_utils.py
garden_ai/scripts/: custom_jupyter_config.py  save_session_and_metadata.py
garden_ai/templates/: pipeline
garden_ai/utils/: _meta.py  dois.py  filesystem.py  interactive_cli.py  misc.py  notebooks.py  pydantic.py
garden_ai/utilz/: auth.py
helm/: README.md  garden_values.yaml
helm/globus_compute_endpoint/: Chart.yaml  values.yaml
helm/globus_compute_endpoint/templates/: endpoint-config.yaml  endpoint-deployment.yaml  endpoint-instance-config.yaml  (+2 more)
notebooks/: notebooks.md
scripts/: Singularity.def  build_base_images.py  dlhub_migrate.py  migrate_search_index.py
templates/: pipeline
test_ete/: ete_workflow.yaml  test_end_to_end.py
test_ete/models/: keras_requirements.txt  sklearn_requirements.txt  torch_requirements.txt  torch_test_input.pkl
test_ete/templates/: ete_pipeline
tests/: conftest.py  test_backend_client.py  test_backend_client_polling.py  test_cli.py  test_client.py  test_completion.py  test_containers.py  test_entrypoints.py  test_filesystem_utils.py  test_garden.py  test_garden_hpc.py  test_gardens.py  test_globus_compute.py  test_hello.py  test_local_db.py  test_metadata.py  test_mlmodel.py  test_model_upload.py  test_models.py  test_notebook_metadata.py  test_search.py  test_utils.py
tests/app/: test_docker.py  test_entrypoint.py  test_garden.py  test_groundhog.py  test_main.py  test_notebook.py
tests/cli/: test_console.py  test_entrypoint.py  test_garden.py  test_model.py  test_notebook.py  test_pipeline.py  test_search.py
tests/ete/: check_timeout.py  conftest.py  constants.py  test_end_to_end.py  test_tutorial.py  utils.py
tests/fixtures/: entrypoint_metadata.json  garden_metadata.json  garden_nested_metadata_response.json  garden_nested_metadata_with_modal_class.json  helpers.py  modal_class_metadata.json  modal_function_metadata.json
tests/hpc/: test_hpc_functions.py  test_utils.py
tests/hpc_gardens/: test_utils.py
tests/integrations/: test_container_build.py  test_datacite.py  test_mlflow.py  test_pipeline_registration.py  test_search.py
tests/modal/: test_functions.py
tests/model_connectors/: test_github_conn.py  test_hugging_face.py  test_model_connectors.py
tmp/: tmp.md
(+60 files in other folders)
