[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "garden-ai"
version = "0.0.0" # placeholder
description = "Garden: tools to simplify access to scientific AI advances."
# note to contributors: feel free to add yourselves to this list 🌱
maintainers = [
  "Globus Labs <labs@globus.org>",
  "Owen Price Skelly",
  "Will Engler",
  "Ben Blaiszik",
  "Ben Galewsky",
  "Eric Blau",
  "Steve Barnard"
]
authors = [
  "Garden Team <labs@globus.org>",
]
license = "MIT"
readme = "README.md"
include = ["templates"]
homepage = "https://thegardens.ai"
repository = "https://github.com/Garden-AI/garden"
documentation = "https://garden-ai.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.10"
dill = [ # same constraints as globus compute
# https://github.com/funcx-faas/funcX/blob/369807addb855e1964d55bada67c0a374ba44896/compute_sdk/setup.py#L17
     {version = "0.3.5.1", python = "<3.11"},
     {version = "0.3.6", python= ">=3.11"}
]
cryptography = "^42.0.0"
requests = ">=2.20.0,<=2.31.0"
gitpython = "^3.1.35"
globus-sdk = "^3.34.0"
pydantic = "^2.7.2"
typer = { extras = ["all"], version = "^0.12.3" }
jinja2 = "^3.1.2"
huggingface-hub = "0.18.0"
pyyaml = "^6.0"
packaging = "^23.0"
globus-compute-sdk = "<2.28.0"
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.3"
nbformat = "^5.9.2"
docker = "^6.1.3"
nbconvert = "^7.9.2"
ipython = "<8.13"
ipywidgets = "^8.1.3"
boto3 = "^1.29"
boto3-stubs = "^1.29"
urllib3 = [
     {version = "<2", python = "<3.10"},
     {version = "^2.2.1", python = ">=3.10"}
]
python-dotenv = "^1.0.1"
pydantic-core = "^2.18.4"
modal = "^0.66.37"
mixpanel = "^4.10.1"

[tool.poetry.scripts]
garden-ai = "garden_ai.app.main:app"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
mypy = "^1.10.0"
numpy = "^1.24.0"
pandas = [
     {version = "2.0.3", python = "<3.9"},
     {version = "^2", python = ">=3.9"}
]
types-requests = "^2.20.0"
safety = "^2.3.1"
types-pyyaml = "^6.0.12.8"
coverage = { extras = ["toml"], version = "^7.2.3" }
faker = "^26.1.0"
pytest-random-order = "^1.1.1"
pexpect = "^4.9.0"
mixpanel = "^4.10.1"

[tool.poetry.group.develop.dependencies]
pre-commit = "^3.1.1"
black = "^24.1.0"
isort = "^5.12.0"
mkdocs = "^1.4.3"
mkdocs-callouts = "^1.9.0"
mkdocs-extensions = "^0.1.2"
pymdown-extensions = "^10.0.1"
mkdocs-material = "^9.1.13"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
jupyter = "^1.0.0"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = "fixtures|scripts"

[tool.pytest.ini_options]
markers = [
  "cli: deselect with '-m \"not cli\"' to disable CLI tests.",
  "integration: skipped by default, run `pytest --integration` to enable",
  "ete: mark a tests as an end-to-end test",
]
addopts = "--random-order"

[tool.coverage.run]
source = ["garden_ai/"]
omit = ["garden_ai/notebook_templates/*", "tests/*", "scripts/*", "garden_ai/hpc_gardens/*"]
