[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend] # Allows flat layout
module-root = "."

[project]
name = "garden-ai"
version = "0.0.0"                                                           # placeholder
description = "Garden: tools to simplify access to scientific AI advances."
# note to contributors: feel free to add yourselves to this list 🌱
maintainers = [
    {name = "Globus Labs", email = "labs@globus.org"},
    {name = "Owen Price Skelly"},
    {name = "Will Engler"},
    {name = "Hayden Holbrook"},
    {name = "Ben Blaiszik"},
]
authors = [{name = "Garden Team", email = "labs@globus.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cryptography>=44.0.0,<45.0.0",
    "requests>=2.20.0",
    "gitpython>=3.1.35,<4.0.0",
    "globus-sdk>=3.34.0,<4.0.0",
    "pydantic>=2.7.2,<3.0.0",
    "typer>=0.12.3",
    "click>=8.0.0,<8.2.0",
    "jinja2>=3.1.2,<4.0.0",
    "huggingface-hub==0.18.0",
    "pyyaml>=6.0,<7.0",
    "globus-compute-sdk>=3.9.0,<4.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "types-tabulate>=0.9.0.3,<1.0.0.0",
    "nbformat>=5.9.2,<6.0.0",
    "ipython<8.13",
    "ipywidgets>=8.1.3,<9.0",
    "boto3>=1.29,<2.0",
    "boto3-stubs>=1.29,<2.0",
    "urllib3<2; python_version<'3.10'",
    "urllib3>=2.2.1; python_version>='3.10'",
    "python-dotenv>=1.0.1,<2.0",
    "pydantic-core>=2.18.4,<3.0.0",
    "modal>=1.0.0,<2.0.0",
    "mixpanel>=4.10.1,<5.0.0",
    "marshmallow<4.0.0",
    # used transitively by modal -> grpclib, force 4.3.0 to reslove CVE-2025-57804
    # Can remove once we upgrade to more current modal sdk version
    "h2>=4.3.0",
    "groundhog-hpc>=0.2.3",
]

[project.optional-dependencies]
mlip = ["ase"]
mcp = ["mcp>=1.0.0", "uv>=0.8.0"]

[dependency-groups]
develop = [
    "pre-commit>=3.1.1,<4.0.0",
    "ruff>=0.6.9,<1.0.0",
    "mkdocs>=1.4.3,<2.0.0",
    "mkdocs-callouts>=1.9.0,<2.0.0",
    "mkdocs-extensions>=0.1.2,<0.2.0",
    "pymdown-extensions>=10.0.1,<11.0.0",
    "mkdocs-material>=9.1.13,<10.0.0",
    "mkdocstrings[python]>=0.25.2,<0.26.0",
    "jupyter>=1.0.0,<2.0.0",
    "pytest>=7.2.0,<8.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "flake8>=5.0.4,<6.0.0",
    "mypy==1.14.1",
    "numpy>=1.24.0,<2.0.0",
    "pandas==2.0.3; python_version<'3.9'",
    "pandas>=2.0.0,<3.0.0; python_version>='3.9'",
    "types-requests>=2.20.0,<3.0.0",
    "safety>=2.3.1,<3.0.0",
    "types-pyyaml>=6.0.12.8,<7.0.0",
    "coverage[toml]>=7.2.3,<8.0.0",
    "faker>=26.1.0,<27.0.0",
    "pytest-random-order>=1.1.1,<2.0.0",
    "pexpect>=4.9.0,<5.0.0",
    "mixpanel>=4.10.1,<5.0.0",
]


[project.urls]
homepage = "https://thegardens.ai"
repository = "https://github.com/Garden-AI/garden"
documentation = "https://garden-ai.readthedocs.io/en/latest/"

[project.scripts]
garden-ai = "garden_ai.app.main:app"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [
    "fixtures/",
    "scripts/",
    "garden_ai/hpc_executors/",
    "garden_ai/hpc_gardens/",
]

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "uv",
    "torch",
    "torch_sim",
    "torch_sim.*",
    "mace.*",
    "sevenn.*",
    "mattersim.*",
    "mcp.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
markers = [
    "cli: deselect with '-m \"not cli\"' to disable CLI tests.",
    "integration: skipped by default, run `pytest --integration` to enable",
    "ete: mark a tests as an end-to-end test",
]
addopts = "--random-order"

[tool.coverage.run]
source = ["garden_ai/"]
omit = [
    "garden_ai/notebook_templates/*",
    "tests/*",
    "scripts/*",
    "garden_ai/hpc_gardens/*",
    "garden_ai/hpc_executors/*",
]
